<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/mi_undo"
        android:title="@string/menu_undo"        
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_undo" />
        
    <item android:id="@+id/mi_redo"
        android:title="@string/menu_redo" 
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_redo" />
    
    <item android:id="@+id/mi_reset"
        android:title="@string/menu_reset" 
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_reset"
        />
    
    <item android:id="@+id/mi_test_math_parser"
        android:title="@string/menu_test_math_parser"
         />
    
    <item android:id="@+id/mi_info"
        android:title="@string/menu_info"
        android:icon="@drawable/ic_action_info" />

</menu>